# VoiceAgent-Websocket

./: .gitignore  README.markdown  README.md  pyproject.toml
app/: __init__.py  main.py  router.py
app/client/: __init__.py  client.py  pool.py  pool_instance.py
app/db/: __init__.py  database.py
app/handlers/: __init__.py  openai_handler.py  stream_state.py
app/handlers/tools/: tool_response.py
app/tools/: iot_tools.py
static/: client.html
